--- a/style.css
+++ b/style.css
@@ -2,3 +2,300 @@
     margin: 0;
     padding: 0;
 }
+body{
+    width: 100vw;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.nav-cont a{
+    padding-right: 20px;
+}
+
+.nav-cont a{
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.dropdown-menu{
+    display: inline-block;
+}
+
+.dropdown-item{
+    display: none;
+    position: absolute;
+    background: #3d3d3d;
+    min-width: 160px;
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.nav-cont1 ul{
+    display: inline-flex;
+    list-style: none;
+}
+
+.nav-cont1 a{
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.dropbtn{
+    cursor: pointer;
+}
+
+.dropdown{
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content{
+    display: none;
+    position: absolute;
+    background: #000000;
+    min-width: 220px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a{
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-item{
+    font-size: 12px;
+}
+
+
+/*NavBar1 This is the Navbar Black*/
+.dropdown-content a:hover{
+    background-color: #000000;
+}
+
+.dropdown:hover .dropdown-content{
+    display: block;
+}
+
+.dropdown-menu:hover .nav-link{
+    background: #000000;
+}
+
+/*White Navbar*/
+.white-nav svg{
+    width: 1.5vw;
+    height: auto;
+    color: #3d3d3d;
+    padding-top: 6px;
+}
+
+.white-nav img{
+    width: 205px;
+    height: auto;
+    margin: 0px 0px 0 15px;
+}
+
+.white-nav{
+    justify-content: space-between;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
+.white-cont{
+    padding: 10px 6px 0 6px;
+
+}
+
+.white-cont a{
+    text-decoration: none;
+    margin-left: 10px;
+    font-size: 12px;
+    color: #3d3d3d;
+}
+
+.white-cont1{
+    display: inline-flex;
+    border-left: 1px solid rgb(149, 148, 148);
+}
+
+.white-cont1 {
+    padding: 5px 18px 5px 15px;
+    color: #ffffff;
+}
+
+.white-cont1 img{
+    padding-right: 15px;
+}
+
+.white-cont1 h3{
+    padding: 5px 25px;
+    color: rgb(197, 58, 53);
+}
+
+.a-btn{
+    text-decoration: none;
+    background-color: #00CCCC;
+    color: #ffffff;
+    border-radius: 4px;
+    padding: 7px 7px 7px 10px;
+    font-size: 12px;
+}
+
+.tnw-logo{
+    background: linear-gradient(to bottom right,#c09,#f42 85%);
+    width: 56px;
+    height: 50px;
+    padding: 16px 20px;
+}
+
+/*Yellow Nav*/
+
+.yellow a{
+    text-decoration: none;
+    padding-left: 35px;
+    font-size: 12px;
+    color: #000000;
+}
+
+/* Extra Large Devices (Large desktops, 1200px and up)*/
+@media (max-width: 1640px) and (min-width: 1114px){
+    body{
+       font-size: 14px;
+    }
+    .tnw-logo, .ham-icon {
+        display: none;
+    }
+    .navbar{
+        width: 100vw;
+        background: #000000;   
+        display: grid;
+        grid-template-columns: repeat(2,auto);
+        grid-template-rows: repeat(1,auto);
+        justify-content: space-between;
+    }
+    .nav-cont{
+        display: inline-flex;
+        grid-column: 1;
+        grid-row: 1;
+        padding-left: 30px;
+    }
+    .nav-cont1{
+        display: inline-flex;
+        grid-column: 2;
+        grid-row: 1;
+        padding-right: 30px;
+    }
+    .nav-cont1 a{
+        margin-left: 15px;
+    }
+    .white-nav{
+        width: 100vw;
+        display: grid;
+        grid-template-columns: repeat(3,auto);
+        grid-template-rows: repeat(1,auto);
+        justify-content: space-between;
+    }
+    .img-cont{
+        display: none;
+    }
+    .white-cont{
+        grid-column: 1/3;
+        grid-row: 1;
+        justify-content: space-between;
+        padding-left: 30px;
+    }
+    .white-cont1{
+        grid-column: 3/3;
+        grid-row: 1;
+        justify-content: space-between;
+    }
+    .nav-cont1 a{
+        margin-left: 15px;
+    }
+    .yellow{
+        width: 100vw;
+        background: #FFDD33;
+        height: 20px;
+    }
+}
+
+/*Large Devices (Desktops, 1035px and up)*/
+@media (max-width: 1113px) and (min-width: 768px){
+    body{
+        font-size: 14px;
+     }
+     .tnw-logo, .ham-icon, .a-btn, .white-cont1 h3, .white-cont1 img {
+        display: none;
+     }
+    .navbar{
+        width: 100vw;
+        background: #000000;   
+        display: grid;
+        grid-template-columns: repeat(2,auto);
+        grid-template-rows: repeat(1,auto);
+        justify-content: space-between;
+    }
+     .nav-cont{
+         display: inline-flex;
+         grid-column: 1;
+         grid-row: 1;
+         padding-left: 30px;
+     }
+     .nav-cont1{
+         display: inline-flex;
+         grid-column: 2;
+         grid-row: 1;
+         padding-right: 30px;
+     }
+     .nav-cont1 a{
+         margin-left: 15px;
+     }
+     .white-nav{
+         width: 100vw;
+         display: grid;
+         grid-template-columns: repeat(3,auto);
+         grid-template-rows: repeat(1,auto);
+         justify-content: space-between;
+     }
+     .img-cont{
+         display: none;
+     }
+     .white-cont{
+         grid-column: 1/3;
+         grid-row: 1;
+         justify-content: space-between;
+         padding-left: 30px;
+     }
+     .white-cont1{
+         grid-column: 3/3;
+         grid-row: 1;
+         justify-content: space-between;
+     }
+     .nav-cont1 a{
+         margin-left: 15px;
+     }
+     .yellow{
+        width: 100vw;
+        background: #FFDD33;
+        height: 20px;
+    }
+}
+
+/*Medium Devices (Tablets, 770px and up)*/
+@media (max-width: 767px) and (min-width: 425px){
+    .nav-cont{
+        display: inline-flex;
+        grid-column: 1;
+        grid-row: 1;
+        padding-left: 30px;
+    }
+    .nav-cont1{
+        display: none;
+    }
+}
+
+/*Small Devices (Landscape phones, 576px and up)*/
+@media (max-width: 424px) and (min-width: 50px){
+
+}
