--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2,300 +2,248 @@
     margin: 0;
     padding: 0;
 }
+
 body{
-    width: 100vw;
-    font-family: Arial, Helvetica, sans-serif;
+width: 100%;
+font-family: Arial, Helvetica, sans-serif;
 }
 
-.nav-cont a{
-    padding-right: 20px;
-}
-
-.nav-cont a{
-    text-decoration: none;
-    color: #ffffff;
-}
-
-.dropdown-menu{
-    display: inline-block;
-}
-
-.dropdown-item{
-    display: none;
-    position: absolute;
-    background: #3d3d3d;
-    min-width: 160px;
-    padding: 12px 16px;
-    z-index: 1;
-}
-
-.nav-cont1 ul{
-    display: inline-flex;
-    list-style: none;
-}
-
-.nav-cont1 a{
-    text-decoration: none;
-    color: #ffffff;
-}
-
-.dropbtn{
-    cursor: pointer;
-}
-
-.dropdown{
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content{
-    display: none;
-    position: absolute;
-    background: #000000;
-    min-width: 220px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-.dropdown-content a{
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-item{
-    font-size: 12px;
+.top-div li, .top-div a, .white-nav li, .white-nav a{
+list-style-type: none;
+text-decoration-line: none;
+font-size: 12px;
+padding: 5px;
+color: #808080;
 }
 
 
-/*NavBar1 This is the Navbar Black*/
-.dropdown-content a:hover{
-    background-color: #000000;
-}
+.white-nav li, .white-nav a {
+    list-style-type: none;
+    text-decoration-line: none;
+    font-size: 14px;
+    padding: 5px;
+    color: #999595;
+    line-height: 10px;
+    }
 
-.dropdown:hover .dropdown-content{
-    display: block;
-}
-
-.dropdown-menu:hover .nav-link{
-    background: #000000;
-}
-
-/*White Navbar*/
-.white-nav svg{
-    width: 1.5vw;
-    height: auto;
-    color: #3d3d3d;
-    padding-top: 6px;
-}
-
-.white-nav img{
-    width: 205px;
-    height: auto;
-    margin: 0px 0px 0 15px;
-}
-
-.white-nav{
-    justify-content: space-between;
-    padding-top: 3px;
-    padding-bottom: 3px;
-}
-
-.white-cont{
-    padding: 10px 6px 0 6px;
-
-}
-
-.white-cont a{
-    text-decoration: none;
+#news {
+    color: #fff;
     margin-left: 10px;
+}
+
+
+.top-nav {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    justify-content: space-between;
+    background-color: #1f1d1d;
+}
+
+.left-list {
+ display: grid;
+ grid-template-columns: repeat(6, auto);
+width: 500px;
+}
+
+.right-list {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    width: 300px;
+}
+
+.event-list, .bizlist {
+    display: none;
+}
+
+.event-drop:hover > .event-list, 
+.biz-drop:hover > .bizlist{
+    display: block;
+    background-color: black;
+}
+
+#neural{
+  margin-right: 80px; 
+}
+
+.event-list a:hover {
+color: #ffffff;
+border: 1px solid #918888;
+}
+
+.bizlist a:hover {
+    color: #d8cdcd;
+    border: 1px solid #8b8080;
+
+}
+
+.event-list, .bizlist {
+position: absolute;
+}
+
+.white-nav, .right-white-list{
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    background-color:white;
+    align-items: center;
+}
+
+.left-white-list{
+    display: grid;
+    grid-template-columns: repeat(6,auto);
+}
+
+.white-nav {
+    height: 40px;
+}
+
+.svg-inline--fa.fa-search.fa-w-16 {
+    border-left: 1px solid #6e6b6b;
+    bottom: 5px;
+    height: 42px;
+    padding-left: 20px;
+    position: relative;
+    width: 20px;
+}
+
+.white-nav-img{
+height: 30px;
+width: 205px;    
+}
+
+#date {
+color: #e04141;
+font-size: 20px;
+font-weight: 700;
+}
+
+.white-nav .button {
+    width: 145px;
+    height: 35px;
+   font-size: 12px;
+   border-radius: 5px;
+   background-color: #00cccc;
+   border: 0;
+   padding: 10px;
+   color: #d6cdcd;
+   font-weight: 700;
+}
+
+
+.white-nav .button:hover {
+    background-color:#500d50; 
+}
+
+.right-white-list{
+    height: 40px;
+}
+
+#latest {
+    margin-left: 10px;
+}
+
+.yellow a {
+    text-decoration-line: none;
+    margin-left: 20px;
+    position: relative;
+    top: 5px;
     font-size: 12px;
-    color: #3d3d3d;
+    color: #251f1f;
 }
 
-.white-cont1{
-    display: inline-flex;
-    border-left: 1px solid rgb(149, 148, 148);
+.yellow {
+    background-color: #ffdd33;
+    height: 30px;
+    width: 100%;
+    
 }
 
-.white-cont1 {
-    padding: 5px 18px 5px 15px;
-    color: #ffffff;
+.bio-tnw-cont {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    column-gap: 10px;
+    row-gap: 10px;
+    padding: 0 10px 0 10px;
 }
 
-.white-cont1 img{
-    padding-right: 15px;
+.right-art, 
+.funding {
+    display: grid;
+    grid-template-rows: repeat(2,auto);
 }
 
-.white-cont1 h3{
-    padding: 5px 25px;
-    color: rgb(197, 58, 53);
+.left-img{
+  width: 800px;
+  height: 400px;
 }
 
-.a-btn{
-    text-decoration: none;
-    background-color: #00CCCC;
-    color: #ffffff;
-    border-radius: 4px;
-    padding: 7px 7px 7px 10px;
-    font-size: 12px;
+.right-top-img {
+    width: 100%;
+    height: 198px;
 }
 
-.tnw-logo{
-    background: linear-gradient(to bottom right,#c09,#f42 85%);
-    width: 56px;
-    height: 50px;
-    padding: 16px 20px;
+.right-bottom-img {
+    width: 100%;
+    height: 198px;
 }
 
-/*Yellow Nav*/
+.top-header, .app-div {
+display: grid;
+grid-template-rows: repeat(4,auto);
 
-.yellow a{
-    text-decoration: none;
-    padding-left: 35px;
-    font-size: 12px;
-    color: #000000;
 }
 
-/* Extra Large Devices (Large desktops, 1200px and up)*/
-@media (max-width: 1640px) and (min-width: 1114px){
-    body{
-       font-size: 14px;
-    }
-    .tnw-logo, .ham-icon {
-        display: none;
-    }
-    .navbar{
-        width: 100vw;
-        background: #000000;   
-        display: grid;
-        grid-template-columns: repeat(2,auto);
-        grid-template-rows: repeat(1,auto);
-        justify-content: space-between;
-    }
-    .nav-cont{
-        display: inline-flex;
-        grid-column: 1;
-        grid-row: 1;
-        padding-left: 30px;
-    }
-    .nav-cont1{
-        display: inline-flex;
-        grid-column: 2;
-        grid-row: 1;
-        padding-right: 30px;
-    }
-    .nav-cont1 a{
-        margin-left: 15px;
-    }
-    .white-nav{
-        width: 100vw;
-        display: grid;
-        grid-template-columns: repeat(3,auto);
-        grid-template-rows: repeat(1,auto);
-        justify-content: space-between;
-    }
-    .img-cont{
-        display: none;
-    }
-    .white-cont{
-        grid-column: 1/3;
-        grid-row: 1;
-        justify-content: space-between;
-        padding-left: 30px;
-    }
-    .white-cont1{
-        grid-column: 3/3;
-        grid-row: 1;
-        justify-content: space-between;
-    }
-    .nav-cont1 a{
-        margin-left: 15px;
-    }
-    .yellow{
-        width: 100vw;
-        background: #FFDD33;
-        height: 20px;
-    }
+.div-4-eight,.apps-anch {
+display: grid;
+grid-template-rows: repeat(5, auto);
+padding: 0 40px 0 40px;
+
 }
 
-/*Large Devices (Desktops, 1035px and up)*/
-@media (max-width: 1113px) and (min-width: 768px){
-    body{
-        font-size: 14px;
-     }
-     .tnw-logo, .ham-icon, .a-btn, .white-cont1 h3, .white-cont1 img {
-        display: none;
-     }
-    .navbar{
-        width: 100vw;
-        background: #000000;   
-        display: grid;
-        grid-template-columns: repeat(2,auto);
-        grid-template-rows: repeat(1,auto);
-        justify-content: space-between;
-    }
-     .nav-cont{
-         display: inline-flex;
-         grid-column: 1;
-         grid-row: 1;
-         padding-left: 30px;
-     }
-     .nav-cont1{
-         display: inline-flex;
-         grid-column: 2;
-         grid-row: 1;
-         padding-right: 30px;
-     }
-     .nav-cont1 a{
-         margin-left: 15px;
-     }
-     .white-nav{
-         width: 100vw;
-         display: grid;
-         grid-template-columns: repeat(3,auto);
-         grid-template-rows: repeat(1,auto);
-         justify-content: space-between;
-     }
-     .img-cont{
-         display: none;
-     }
-     .white-cont{
-         grid-column: 1/3;
-         grid-row: 1;
-         justify-content: space-between;
-         padding-left: 30px;
-     }
-     .white-cont1{
-         grid-column: 3/3;
-         grid-row: 1;
-         justify-content: space-between;
-     }
-     .nav-cont1 a{
-         margin-left: 15px;
-     }
-     .yellow{
-        width: 100vw;
-        background: #FFDD33;
-        height: 20px;
-    }
+.funding-img-cont,
+.top-img-div, 
+.top-img-caps, 
+.next-img-div, 
+.next-img-cap {
+display: grid;
+grid-template-columns: repeat(4, auto);
+column-gap: 20px;
+row-gap: 20px;
 }
 
-/*Medium Devices (Tablets, 770px and up)*/
-@media (max-width: 767px) and (min-width: 425px){
-    .nav-cont{
-        display: inline-flex;
-        grid-column: 1;
-        grid-row: 1;
-        padding-left: 30px;
-    }
-    .nav-cont1{
-        display: none;
-    }
+.top-img-div img,
+.next-img-div img, .apps-img {
+    height: 210px;
+    width: 100%;
 }
 
-/*Small Devices (Landscape phones, 576px and up)*/
-@media (max-width: 424px) and (min-width: 50px){
+.top-img-caps .img-clue,
+ .next-img-cap .img-clue {
+    width: 240px;
+    height: 100px;
+    
+}
 
+.eight-grids{
+    width: 100%;
+}
+
+.cont-main {
+    display: grid;
+    grid-template-rows: repeat(5, auto);
+}
+
+.funding-up,.latest-div {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+}
+
+.funding-list, .apps, 
+.creative-cont {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+}
+
+.latest-img {
+    height: 95px;
+    width: 95px;
 }
