--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -166,7 +166,7 @@ font-weight: 700;
 }
 
 .right-art, 
-.funding {
+.funding, .footer-up-div,.footer-cont {
     display: grid;
     grid-template-rows: repeat(2,auto);
 }
@@ -229,16 +229,16 @@ row-gap: 20px;
 
 .cont-main {
     display: grid;
-    grid-template-rows: repeat(5, auto);
+    grid-template-rows: repeat(7, auto);
 }
 
-.funding-up,.latest-div {
+.funding-up,.latest-div{
     display: grid;
     grid-template-columns: repeat(2, auto);
 }
 
 .funding-list, .apps, 
-.creative-cont {
+.creative-cont, .launch-cont  {
     display: grid;
     grid-template-columns: repeat(3, auto);
 }
@@ -246,4 +246,59 @@ row-gap: 20px;
 .latest-img {
     height: 95px;
     width: 95px;
+}
+
+.icon-cont {
+    display: grid;
+    grid-template-columns: repeat(7, auto);
+}
+
+.list-container {
+    display: grid;
+    grid-template-columns: repeat(5, auto);
+}
+
+.tnw-small {
+ width:10px   
+}
+
+.footer-up-div *{
+    list-style-type: none;
+    text-decoration-line: none;
+    justify-content: center;
+}
+
+.list-container li {
+    padding: 0 10px 0 10px;
+}
+
+.list-container a, .icon-cont a{
+    color: #f1ecec;
+}
+
+.icon-cont li {
+    padding: 0 20px 0 20px;
+    color: white;
+}
+
+.icon-div {
+padding:30px 0 20px 0;
+}
+
+.signal-img {
+    width: 30px;
+    height: 30px;
+}
+
+.footer-up-div {
+    height: 120px;
+    background-color: #4d4a4a;
+}
+
+.footer-down-div {
+    background-color: #131111;
+}
+
+.footer-down-div span {
+  color: #e7e3e3;
 }
