--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -171,6 +171,23 @@ font-weight: 700;
     grid-template-rows: repeat(2,auto);
 }
 
+.left-art {
+    display: grid;
+    grid-template-rows: repeat(2,auto);
+    background-image: url(../font/img/left-art-img.png);
+    padding-left: 6em;
+    padding-right: 15em;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    color: red;
+    height: 400px;
+    grid-gap: 5px;
+}
+
+.left-art-top, .left-art-down{
+    width: 100%;
+    height: 198px;
+}
+
 .left-img{
   width: 800px;
   height: 400px;
