--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -165,7 +165,7 @@ font-weight: 700;
     padding: 0 10px 0 10px;
 }
 
-.right-art, 
+.right-art, .div-4-eight,
 .funding, .footer-up-div,.footer-cont {
     display: grid;
     grid-template-rows: repeat(2,auto);
@@ -209,7 +209,7 @@ grid-template-rows: repeat(4,auto);
 
 }
 
-.div-4-eight,.apps-anch {
+.apps-anch {
 display: grid;
 grid-template-rows: repeat(5, auto);
 padding: 0 40px 0 40px;
@@ -246,7 +246,7 @@ row-gap: 20px;
 
 .cont-main {
     display: grid;
-    grid-template-rows: repeat(7, auto);
+    grid-template-rows: repeat(8, auto);
 }
 
 .funding-up,.latest-div{
@@ -320,3 +320,24 @@ padding:30px 0 20px 0;
   color: #e7e3e3;
 }
 
+@media only screen and (max-width: 768px){
+    .bio-tnw-cont{
+        display: grid;
+        grid-template-columns: 1fr;
+        }
+
+        .upper-grid,.lower-grid {
+            display: grid;
+            grid-template-columns:repeat(2,1fr) ;
+        }
+
+        .top-img-div,.top-img-caps,.next-img-cap,.next-img-div {
+            display: grid;
+            grid-template-columns: auto;
+        }
+
+        .funding-img-cont,.funding-up,.funding-list {
+            display: flex;
+            flex-direction: column;
+        }
+}
