--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -180,7 +180,7 @@ position: absolute;
     grid-template-columns: minmax(0, 2fr) minmax(0, 1fr);
     padding-left: 10px;
     position: relative;
-    top: 90px;
+    top: 5px;
 }
 
 .right-art{
@@ -1413,6 +1413,7 @@ padding:30px 0 20px 0;
     display: grid;
     grid-template-columns: 1fr;
     width: 100%;
+    border-top: 5px;
 }
 
 .right-art-top, .right-art-bottom, .left-art {
